using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class AnimationString : MonoBehaviour
{
    internal static string isRunning = "isRunning";
    internal static string yVelocity = "yVelocity";
    internal static string isGrounded = "isGrounded";
    internal static string isOnWall = "isOnWall";
    internal static string isOnCeiling = "isOnCeiling";
    internal static string isAlive = "isAlive";
    internal static string hurtTrigger = "hurtTrigger";
    internal static string sceneTransition = "sceneTransition";
    internal static string isClaimed = "isClaimed";
}
